<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingrese_un_numero_al_arbol_aa"
            android:textColor="#4CAF50"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/numberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/numero_entero"
            android:inputType="number" />

        <Button
            android:id="@+id/numberButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar_numero"
            app:backgroundTint="#216324" />

        <TextView
            android:id="@+id/preorderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preorden_actual_del_arbol"
            android:textColor="#4CAF50"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/preOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/inorderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inorden_actual_del_arbol"
            android:textColor="#4CAF50"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/postorderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_orden_actual_del_arbol"
            android:textColor="#4CAF50"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/postOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/deleteNodes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/limpiar_arbol"
            app:backgroundTint="#216324" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/apple_tree"
            android:contentDescription="TODO" />
    </LinearLayout>

</RelativeLayout>